[package]
name = "dgira"
version = "0.1.0"
edition = "2021"
publish = ["gsr-remote"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", registry = "gsr-remote" }
gouqi = { version = "0.7.1", registry = "gsr-remote" }
serde_json = { version = "1.0.114", registry = "gsr-remote" }
tracing = { version = "0.1.40", registry = "gsr-remote" }
tracing-subscriber = { version = "0.3.18", registry = "gsr-remote" }
